--- a/appExa/appExa/MainWindow.xaml
+++ b/appExa/appExa/MainWindow.xaml
@@ -17,7 +17,12 @@
                         <PasswordBox x:Name="PasswordBox" Height="20px" Width="350px"/>
                         <TextBlock x:Name="StatusText" Margin="10" HorizontalAlignment="Center"/>
                 </Grid>
-                <Button HorizontalAlignment="Center" Content="Ingresar" x:Name="BotonIngresar" Padding="5px" Click="Boton_OnClick">
+                <Button HorizontalAlignment="Center" Content="Registrarse" x:Name="BotonRegistrar" Padding="5px" Click="Boton_OnClick">
+                        <Button.Margin>
+                                <Thickness Top="10" Bottom="10"/>
+                        </Button.Margin>
+                </Button>
+                <Button HorizontalAlignment="Center" Content="Ingresar" x:Name="BotonIngresar" Padding="5px" Click="BotonIngresar_OnClick">
                         <Button.Margin>
                                 <Thickness Top="10" Bottom="10"/>
                         </Button.Margin>
