--- a/appExa/appExa/MainWindow.xaml
+++ b/appExa/appExa/MainWindow.xaml
@@ -3,29 +3,63 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:appExa"
         mc:Ignorable="d"
-        Title="MainWindow" Height="400" Width="600">
-    <StackPanel VerticalAlignment="Center">
-        <Label x:Name="NameLabel" Content="" FontWeight="Bold"/>
-        <Grid>
-            <Label Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Width="50px" Content = "Usuario: "/>
-            <TextBox Grid.Column="0" Grid.Row="0" x:Name="Usuario" Height="20px" Width="350px"/>
-        </Grid>
-        <Grid>
-            <Label Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Width="70px" Content = "Contraseña: "/>
-            <PasswordBox x:Name="PasswordBox" Height="20px" Width="350px"/>
-            <TextBlock x:Name="StatusText" Margin="10" HorizontalAlignment="Center"/>
-        </Grid>
-        <Button HorizontalAlignment="Center" Content="Registrarse" x:Name="BotonRegistrar" Padding="5px" Click="Boton_OnClick">
-            <Button.Margin>
-                <Thickness Top="10" Bottom="10"/>
-            </Button.Margin>
-        </Button>
-        <Button HorizontalAlignment="Center" Content="Ingresar" x:Name="BotonIngresar" Padding="5px" Click="BotonIngresar_OnClick">
-            <Button.Margin>
-                <Thickness Top="10" Bottom="10"/>
-            </Button.Margin>
-        </Button>
-    </StackPanel>
+        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize">
+    <Grid MouseDown="Border_MouseDown">
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0.1,0" EndPoint="0.9,1">
+                <GradientStop Color="#F8C471" Offset="1"/>
+                <GradientStop Color="#E74C3C" Offset="0"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Border Height="390" VerticalAlignment="Top" CornerRadius="0 0 180 0" Background="#E67E22" MouseDown="Border_MouseDown"/>
+        <StackPanel Orientation="Horizontal">
+            <StackPanel Width="350">
+                <Image Source="" />
+            </StackPanel>
+            <StackPanel Width="350">
+                <StackPanel Margin="-10 40">
+                    <TextBlock Text="Iniciar Sesion" Margin="20" Foreground="Bisque" TextAlignment="Center" FontSize="38" FontFamily="Courier New" />
+                    <StackPanel Orientation="Horizontal" Margin="10">
+                        <materialDesign:PackIcon Kind="User" Width="25" Height="25" Foreground="Azure" />
+                        <TextBox x:Name="Usuario" Margin="10 0" materialDesign:HintAssist.Hint="Usuario / Email" Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="10">
+                        <materialDesign:PackIcon Kind="Password" Width="25" Height="25" Foreground="Azure" />
+                        <PasswordBox x:Name="PasswordBox" Margin="10 0" materialDesign:HintAssist.Hint="Contrasena" Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
+                    </StackPanel>
+                    <StackPanel Margin="10" HorizontalAlignment="Center">
+                        <Button Height="30" Width="200" HorizontalAlignment="Left" Background="Transparent" FontSize="14" FontWeight="DemiBold"
+                                Content="¿Olvidaste tu contraseña?" BorderThickness="0" Margin="0 1.5 0 0" Cursor="Hand" />
+                    </StackPanel>
+                    <StackPanel Margin="10" HorizontalAlignment="Center">
+                        <Button Width="100" Height="40" Style="{StaticResource MaterialDesignRaisedButton}"
+                                materialDesign:ButtonAssist.CornerRadius="10" BorderThickness="2" BorderBrush="Bisque"
+                                Background="Azure" Foreground="Chocolate" ToolTip="Ingresar" x:Name="Ingresar" Click="BotonIngresar_OnClick" Content="Ingresar">
+                        </Button>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"  Margin="10" HorizontalAlignment="Center">
+                        <Label Height="25" FontSize="14" HorizontalAlignment="Right" Foreground="Azure" FontWeight="DemiBold">¿No tenes una cuenta?</Label>
+                        <Button Height="30" Width="100" HorizontalAlignment="Left" Background="Transparent" FontSize="14" FontWeight="DemiBold" Content="Registrate"
+                                BorderThickness="0" Margin="0 1.5 0 0" Cursor="Hand" />
+                    </StackPanel>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Width="100">
+                <Button Margin="10 20" Style="{StaticResource MaterialDesignFloatingActionButton}" Background="{x:Null}"
+                        ToolTip="Close" x:Name="Cerrar" Click="Cerrar_OnClick">
+                    <materialDesign:PackIcon Kind="Close" Foreground="Azure" Width="20" Height="20" />
+                </Button>
+            </StackPanel>
+        </StackPanel>
+    </Grid>
+    
+    
+    
+    
+    
+
+        
 </Window>
