--- a/appExa/appExa/MainWindow.xaml
+++ b/appExa/appExa/MainWindow.xaml
@@ -14,7 +14,7 @@
                 <GradientStop Color="#E74C3C" Offset="0"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Border Height="390" VerticalAlignment="Top" CornerRadius="0 0 180 0" Background="#E67E22" MouseDown="Border_MouseDown"/>
+        <Border Height="390" VerticalAlignment="Top" CornerRadius="0 0 180 0" Background="#E67E22" />
         <StackPanel Orientation="Horizontal">
             <StackPanel Width="350">
                 <Image Source="" />
@@ -58,11 +58,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-    
-    
-    
-    
-    
-
-        
 </Window>
