--- a/appExa/appExa/Registro.xaml
+++ b/appExa/appExa/Registro.xaml
@@ -14,7 +14,7 @@
                 <GradientStop Color="#E74C3C" Offset="0"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Border Height="390" VerticalAlignment="Top" CornerRadius="0 0 180 0" Background="#E67E22" MouseDown="Border_MouseDown"/>
+        <Border Height="390" VerticalAlignment="Top" CornerRadius="0 0 0 180" Background="#E67E22" MouseDown="Border_MouseDown"/>
         <StackPanel Orientation="Horizontal">
             <StackPanel Width="700">
                 <StackPanel Margin="-10 40">
@@ -58,6 +58,12 @@
                             Foreground="Chocolate" Click="BotonRegistrarse_OnClick" Content="Listo">
                     </Button>
                 </StackPanel>
+            </StackPanel>
+            <StackPanel Width="100">
+                <Button Margin="10 20" Style="{StaticResource MaterialDesignFloatingActionButton}" Background="{x:Null}"
+                        x:Name="Cerrar" Click="Cerrar_OnClick">
+                    <materialDesign:PackIcon Kind="Close" Foreground="Azure" Width="20" Height="20" />
+                </Button>
             </StackPanel>
         </StackPanel>
     </Grid>
