--- a/appExa/appExa/MainWindow.xaml
+++ b/appExa/appExa/MainWindow.xaml
@@ -21,7 +21,7 @@
             </StackPanel>
             <StackPanel Width="350">
                 <StackPanel Margin="-10 40">
-                    <TextBlock Text="Iniciar Sesion" Margin="20" Foreground="Bisque" TextAlignment="Center" FontSize="38" FontFamily="Courier New" />
+                    <TextBlock Text="Iniciar Sesion" Margin="10" Foreground="Bisque" TextAlignment="Center" FontSize="40" FontFamily="Comic Sans MS, Verdana" />
                     <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="10">
                         <materialDesign:PackIcon Kind="User" Width="25" Height="25" Foreground="Azure" />
                         <TextBox x:Name="Usuario" Margin="10 0" materialDesign:HintAssist.Hint="Usuario / Email" Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
@@ -33,7 +33,7 @@
                     <StackPanel Margin="10" HorizontalAlignment="Center">
                         <Button Style="{StaticResource MaterialDesignRaisedButton}"
                                 materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Background="Transparent" FontSize="14" FontWeight="DemiBold"
-                                Content="¿Olvidaste tu contraseña?" BorderThickness="0" Margin="0 1.5 0 0" Cursor="Hand" />
+                                Content="¿Olvidaste tu contraseña?" BorderThickness="0" Margin="0 1.5 0 0" x:Name="OlvidarContrasena" Click="OlvidarContrasena_OnClick" Cursor="Hand" />
                     </StackPanel>
                     <StackPanel Margin="10" HorizontalAlignment="Center">
                         <Button Width="100" Height="40" Style="{StaticResource MaterialDesignRaisedButton}"
