--- a/appExa/appExa/MainWindow.xaml
+++ b/appExa/appExa/MainWindow.xaml
@@ -21,7 +21,7 @@
             </StackPanel>
             <StackPanel Width="350">
                 <StackPanel Margin="-10 40">
-                    <TextBlock Text="Iniciar Sesion" Margin="10" Foreground="Bisque" TextAlignment="Center" FontSize="40" FontFamily="Comic Sans MS, Verdana" />
+                    <TextBlock Text="Iniciar Sesion" Margin="10" Foreground="Bisque" TextAlignment="Center" FontSize="40" FontFamily="Roboto Thin" />
                     <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="10">
                         <materialDesign:PackIcon Kind="User" Width="25" Height="25" Foreground="Azure" />
                         <TextBox x:Name="Usuario" Margin="10 0" materialDesign:HintAssist.Hint="Usuario / Email" Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
@@ -32,7 +32,7 @@
                     </StackPanel>
                     <StackPanel Margin="10" HorizontalAlignment="Center">
                         <Button Style="{StaticResource MaterialDesignRaisedButton}"
-                                materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Background="Transparent" FontSize="14" FontWeight="DemiBold"
+                                materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Background="Transparent" FontSize="14" FontFamily="Roboto"
                                 Content="¿Olvidaste tu contraseña?" BorderThickness="0" Margin="0 1.5 0 0" x:Name="OlvidarContrasena" Click="OlvidarContrasena_OnClick" Cursor="Hand" />
                     </StackPanel>
                     <StackPanel Margin="10" HorizontalAlignment="Center">
@@ -42,10 +42,10 @@
                         </Button>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal"  Margin="10" HorizontalAlignment="Center">
-                        <Label Height="26" FontSize="14" HorizontalAlignment="Right" Foreground="Azure" FontWeight="DemiBold">¿No tenes una cuenta?</Label>
+                        <Label Height="26" FontSize="14" HorizontalAlignment="Right" Foreground="Azure" FontFamily="Roboto">¿No tenes una cuenta?</Label>
                         <Button Style="{StaticResource MaterialDesignRaisedButton}"
                                 materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Background="Transparent"
-                                FontSize="14" FontWeight="DemiBold" Content="Registrate" BorderThickness="0" 
+                                FontSize="14" FontFamily="Roboto" Content="Registrate" BorderThickness="0" 
                                 Margin="0 1.5 0 0" Cursor="Hand" x:Name="Registrar" Click="BotonRegistrar_OnClick"/>
                     </StackPanel>
                 </StackPanel>
