--- a/appExa/appExa/MainWindow.xaml
+++ b/appExa/appExa/MainWindow.xaml
@@ -46,18 +46,16 @@
                         </Button>
                     </StackPanel>
                     <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="30 70 0 0">
-                        <Label FontSize="14" Foreground="Azure" FontFamily="Roboto">¿No tenes una cuenta?</Label>
-                        <Button Style="{StaticResource MaterialDesignRaisedButton}"
-                                materialDesign:ButtonAssist.CornerRadius="10" Foreground="Azure" Background="Transparent"
-                                FontSize="14" FontFamily="Roboto" Content="Registrate" BorderThickness="0" 
-                                Margin="0  0 0 0" Cursor="Hand" x:Name="Registrar" Click="BotonRegistrar_OnClick"/>
+                        <TextBlock FontSize="14" Foreground="Azure" FontFamily="Roboto">¿No tenes una cuenta?</TextBlock>
+                        <Button Style="{StaticResource MaterialDesignRaisedButton}" Foreground="#ffffff" Background="Transparent"
+                                FontSize="14" FontFamily="Roboto" Content="Registrate" BorderThickness="0" Cursor="Hand" x:Name="Registrar" Click="BotonRegistrar_OnClick"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
             <StackPanel Width="100">
                 <Button Margin="10 20" Style="{StaticResource MaterialDesignFloatingActionButton}" Background="{x:Null}"
                         x:Name="Cerrar" Click="Cerrar_OnClick">
-                    <materialDesign:PackIcon Kind="Close" Foreground="Azure" Width="20" Height="20" />
+                    <materialDesign:PackIcon Kind="Close" Foreground="#ffffff" Width="20" Height="20" />
                 </Button>
             </StackPanel>
         </StackPanel>
